--- a/css/style.css
+++ b/css/style.css
@@ -59,3 +59,16 @@ body {
     left: 0;
     min-height: 300px;
 }
+
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
+
+.carousel-caption{
+    top: 50%;
+    transform: translateY(-50%);
+    bottom: initial;
+}
