--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 .footer {
     background-color: #D1C4E9;
     margin: 0px auto;
-    padding: 20px 0px 20px 50px;
+    padding: 20px 0px;
 }
 
 .jumbotron {
@@ -28,9 +28,14 @@ address{
     margin: 0px;
     color: #0f0f0f;
 }
-
+/*
 body {
     padding: 50px;
+    z-index: 0;
+}
+*/
+body {
+    padding: 50px 0px 0px 0px;
     z-index: 0;
 }
 
