npm scripts pt1

--- a/css/styless.css
+++ b/css/styless.css
@@ -52,3 +52,17 @@ body {
   position: absolute;
   bottom: 0px;
   z-index: 1; }
+
+.carousel-caption {
+  top: 50%;
+  transform: translateY(-50%);
+  bottom: initial; }
+
+.modal-content {
+  background: #D1C4E9; }
+  .modal-content .modal-header {
+    background: #512DA8; }
+    .modal-content .modal-header .modal-title {
+      color: floralwhite; }
+    .modal-content .modal-header .close {
+      color: floralwhite; }
